post-repo-module: fix code review comments