@@ -4,12 +4,9 @@ import klon.post.repo.api.Post;
 import klon.post.repo.api.PostRepository;
 import lombok.Builder;
 
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Builder
 public class PostRepositoryInmemImpl implements PostRepository {
@@ -21,13 +18,11 @@ public class PostRepositoryInmemImpl implements PostRepository {
     @Override
     public void addPost(Post post) {
         InmemPost inmemPost = mapper.toInmemPost(post);
-        List<InmemPost> userPosts = posts.get(post.getUserId());
-        List<InmemPost> inmemPosts = new ArrayList<>();
-        if (userPosts != null) {
-            inmemPosts.addAll(userPosts);
-        }
-        inmemPosts.add(inmemPost);
-        posts.put(post.getUserId(), List.copyOf(inmemPosts));
+        posts.merge(post.getUserId(), Collections.synchronizedList(new ArrayList<>(Collections.singletonList(inmemPost))),
+                (inmemPosts, inmemPosts2) -> {
+                    inmemPosts.addAll(inmemPosts2);
+                    return Collections.synchronizedList(inmemPosts);
+                });
     }
 
     @Override
@@ -41,8 +36,17 @@ public class PostRepositoryInmemImpl implements PostRepository {
     }
 
     @Override
-    public List<Post> getPostsByUser(String userId) {
+    public Stream<Post> getPostsByUser(String userId) {
         List<InmemPost> inmemPosts = posts.get(userId);
-        return inmemPosts == null ? List.of() : inmemPosts.stream().map(mapper::toPost).collect(Collectors.toUnmodifiableList());
+        if (inmemPosts == null) {
+            return Stream.empty();
+        }
+        inmemPosts.sort(Comparator.comparing(InmemPost::getCreatedTime));
+        return inmemPosts.stream().map(mapper::toPost);
+    }
+
+    @Override
+    public Stream<Post> getPostsByUser(String userId, String postId) {
+        return getPostsByUser(userId).dropWhile(post -> !postId.equals(post.getPostId()));
     }
 }
